--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -66,6 +66,7 @@ jobs:
 
     - name: Commit changes
       run: |
+        git status
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add -A
