--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "REPO_NAME",
+  "name": "TEMPLATE_REPO_NAME",
   "version": "1.0.0",
   "description": "A GitHub template repository for NodeJS based CLI, written in TypeScript",
   "main": "dist/index.js",
