--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "A GitHub template repository for NodeJS based CLI, written in TypeScript",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc && chmod +x dist/index.js",
+    "link": "npm run build && npm link",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
-  "keywords": ["cli", "nodejs", "typescript"],
+  "bin": {
+    "TEMPLATE_REPO_NAME": "./dist/index.js"
+  },
+  "keywords": [
+    "cli",
+    "nodejs",
+    "typescript"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
